--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                   <div class="box">
                     <div class="detail-box">
                       <h1>
-                        Boxing <br />
-                        Center
+                        UNIVERSIDAD NACIONAL DE <br />
+                        SAN AGUSTIN
                       </h1>
                       <hr />
                       <div class="btn-box">
